--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
 	"files.associations": {
 		"*.ejs": "html",
-		"iostream": "cpp"
+		"iostream": "cpp",
+		"__bit_reference": "cpp",
+		"ios": "cpp"
 	}
 }
